# create-api-app

./: .dockerignore  .gitignore  404.html  CNAME  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docker.yml  tests.yml
_project_demo/: .env.local.example  .gitignore
_project_demo/backend/: pyproject.toml
_project_demo/backend/app/: start.py
_project_demo/backend/app/config/: settings.py
_project_demo/backend/app/enums/: __init__.py
_project_demo/backend/app/models/: __init__.py
_project_demo/frontend/: next.config.mjs  package.json  tailwind.config.ts
create_api_app/: config.py  main.py
create_api_app/conf/: file_handler.py  storage.py
create_api_app/setup/: __init__.py  backend.py  base.py  clean.py  docker.py  fastapi.py  frontend.py  nextjs.py  static.py  venv.py
create_api_app/tests/: test_filepaths.py
create_api_app/utils/: helper.py  printables.py
customization/: index.html
customization/database/: index.html
customization/styling/: index.html
docs/: index.md
docs/customization/: database.md  index.md  removal.md  styling.md
docs/file-structure/: backend.md  frontend.md  index.md  root.md
docs/getting-started/: configure.md  index.md  installation.md  license.md  run.md
file-structure/: index.html
file-structure/backend/: index.html
file-structure/frontend/: index.html
file-structure/root/: index.html
getting-started/: index.html
getting-started/configure/: index.html
search/: search_index.json
tests/: test_controllers.py  test_filepaths.py
(+48 files in other folders)
