[tool.poetry]
name = "create-api-app"
version = "1.0.0"
description = "A quickstart tool for creating a FastAPI project with a NextJS frontend."
authors = ["Ryan Partridge <rpartridge101@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.scripts]
create = "create_api_app.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
